# dynamodb-counter

./: README.rst  pyproject.toml
dynamodb_counter/: counter.py
tests/: test_main.py
